[package]
name = "lambda-authoriser"
version = "0.1.0"
authors = ["davidsteiner <david.steiner@validusrm.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
aws_lambda_events = "0.4.0"
futures = "0.3.14"
jsonwebtoken = "7.2.0"
lambda_runtime = "0.3.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "trust-dns"] }
serde = "1.0.125"
serde_json = "1.0.64"
simple-error = "0.2.3"
tokio = { version = "1.5.0", features = ["parking_lot"] }
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.18"
